# augmented-knowledge-interfaces

./: README.md
basic-rag/: .gitignore  Cargo.toml  README.md
basic-rag/scripts/: get_docs_rs.sh  reset_docs.sh  svelte_example.sh
basic-rag/src/: cli.rs  config.rs  embeddings.rs  indexer.rs  ingest.rs  llm.rs  main.rs  prompt.rs  retriever.rs
